Se vuelven a modificar las rutas

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!--Hoja de estilos-->
-    <link rel="stylesheet" href="../public/css/styles.css">
+    <link rel="stylesheet" href="/public/css/styles.css">
 
 </head>
 <body>
@@ -21,8 +21,8 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid barraDeNavegacion">
         <!-- Logo -->
-        <a class="navbar-brand" href="../index.html">
-            <img src="../public/images/IconoAgenda.png" alt="Alquileres">
+        <a class="navbar-brand" href="/index.html">
+            <img src="/public/images/IconoAgenda.png" alt="Alquileres">
         </a>
         
         <!-- Botón hamburguesa -->
@@ -37,21 +37,21 @@
             <!-- Opciones principales -->
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link active elementos-nav-bar" aria-current="page" href="../public/html/reservas.html">Reservas</a>
+                    <a class="nav-link active elementos-nav-bar" aria-current="page" href="/public/html/reservas.html">Reservas</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active elementos-nav-bar" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Meses</a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item meses" href="../public/html/enero.html">Enero</a></li>
-                        <li><a class="dropdown-item meses" href="../public/html/febrebro.html">Febrero</a></li>
-                        <li><a class="dropdown-item meses" href="../public/html/marzo.html">Marzo</a></li>
+                        <li><a class="dropdown-item meses" href="/public/html/enero.html">Enero</a></li>
+                        <li><a class="dropdown-item meses" href="/public/html/febrebro.html">Febrero</a></li>
+                        <li><a class="dropdown-item meses" href="/public/html/marzo.html">Marzo</a></li>
                     </ul>
                 </li>
             </ul>
             
             <!-- Ícono de usuario -->
             <div class="icono-login">
-                <a href="../public/html/inicioSesion.html">
+                <a href="/public/html/inicioSesion.html">
                     <i class="fa-solid fa-user icono"></i>
                 </a>
             </div>
@@ -72,19 +72,19 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="indicadores aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
-                <a href="../public/html/enero.html">
+                <a href="/public/html/enero.html">
                     <div class="carousel-item active">
-                        <img src="../public/images/Enero.jpg" class="d-block w-100" alt="Enero">
+                        <img src="/public/images/Enero.jpg" class="d-block w-100" alt="Enero">
                     </div>
                 </a>
-                <a href="../public/html/febrebro.html">
+                <a href="/public/html/febrebro.html">
                     <div class="carousel-item">
-                        <img src="../public/images/Febrebro.jpg" class="d-block w-100" alt="Febrero">
+                        <img src="/public/images/Febrebro.jpg" class="d-block w-100" alt="Febrero">
                     </div>
                 </a>
-                <a href="../public/html/marzo.html">
+                <a href="/public/html/marzo.html">
                     <div class="carousel-item">
-                        <img src="../public/images/Marzo.jpg" class="d-block w-100 imagen-mes" alt="Marzo">
+                        <img src="/public/images/Marzo.jpg" class="d-block w-100 imagen-mes" alt="Marzo">
                     </div>
                 </a>
             </div>
@@ -102,7 +102,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p class>&copy; Derechos reservados por Santiago Castro</p>
-            <a class href="../public/html/sobreNosotros.html">Sobre Nosotros</a>
+            <a class href="/public/html/sobreNosotros.html">Sobre Nosotros</a>
         </div>
     </footer>  
     <!--Script Boostrap-->
