se mofiiva la ruta de estilos de sobre nosotros

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Icono de la pestaña-->
-    <link rel="icon" href="../public/images/IconoAgenda.png" type="image/png">
+    <link rel="icon" href="/public/images/IconoAgenda.png" type="image/png">
 
     <title>Alquileres</title>
 
